# browser-automation-bot

./: .env  .gitignore  Cargo.toml  README.md
pages/: home_page.rs
src/: config.rs  driver.rs  lib.rs  main.rs
src/pages/: home_page.rs
src/urls/: builders.rs
src/utils/: config.rs  conversions.rs  elements.rs  mod.rs  sites.rs
