[package]
name = "bot_core"
version = "0.1.0"
edition = "2024"

[workspace]

members = [
    "/home/ao_slaughter/Documents/prof_development/rust_education/rust_bot/bot_core"
]

[dependencies]
thirtyfour = "0.35.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
chrono = "0.4"
which = "4.4"
url = "2.4.1"
